--- a/blocks/providers/providers.css
+++ b/blocks/providers/providers.css
@@ -1,11 +1,12 @@
 .providers {
-  padding: 0 10px;
+  padding: 60px 10px 0;
   margin: auto;
   max-width: 1880px;
   box-sizing: border-box;
 }
 .providers__heading {
-  margin: 40px 10px;
+  /* margin: 40px 10px; */
+  padding: 0 10px;
 }
 .provider__card {
   width: 100%;
@@ -72,10 +73,10 @@
 }
 @media screen and (min-width: 680px) {
   .providers {
-    padding: 0 40px;
+    padding: 60px 40px 0;
   }
   .providers__heading {
-    margin: 100px 0 60px;
+    /* margin: 100px 0 60px; */
   }
   .provider__card {
     margin-bottom: 0;
@@ -95,7 +96,7 @@
 }
 @media screen and (min-width: 1100px) {
   .providers {
-    padding: 0 60px;
+    padding: 100px 60px 0;
   }
   .provider__card-area {
     gap: 60px;
